--- a/src/components/2.0/KitGalleryHeader/styles.module.scss
+++ b/src/components/2.0/KitGalleryHeader/styles.module.scss
@@ -165,10 +165,12 @@
 
 .category_content {
   flex: 1;
+  min-width: 0;
 }
 
 .statistics_container {
   margin-left: auto;
+  margin-right: auto;
   display: flex;
   align-items: center;
   flex-shrink: 0;
