--- a/src/components/2.0/Kit3DLogoLibrary/kit-3d-logo-library.module.scss
+++ b/src/components/2.0/Kit3DLogoLibrary/kit-3d-logo-library.module.scss
@@ -19,8 +19,9 @@
 
 .container {
   margin: 0 auto;
-  padding: 40px 20px;
+  padding: 40px 40px;
   width: 100%;
+  max-width: 100%;
   overflow-x: hidden;
   box-sizing: border-box;
 
